--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "main": "dist/index.js",
   "scripts": {
     "pretest": "",
-    "prebuild": "mkdir -p ./dist && npm run build:reflection && npm run build:route_guide",
+    "prebuild": "mkdir -p ./dist && npm run build:reflection && npm run build:route_guide && npm run build:other",
     "build:reflection": "grpc_tools_node_protoc --js_out=import_style=commonjs,binary:./dist --ts_out=generate_package_definition:./dist --grpc_out=grpc_js:./dist ./proto/reflection.proto",
     "build:route_guide": "grpc_tools_node_protoc --descriptor_set_out=./dist/proto/route_guide.bin --include_imports --js_out=import_style=commonjs,binary:./dist --ts_out=generate_package_definition:./dist --grpc_out=grpc_js:./dist ./proto/route_guide.proto",
+    "build:other": "grpc_tools_node_protoc --descriptor_set_out=./dist/proto/other.bin --include_imports --js_out=import_style=commonjs,binary:./dist --ts_out=generate_package_definition:./dist --grpc_out=grpc_js:./dist ./proto/other.proto",
     "build": "tsc",
     "prepare": "npm run build",
     "test": "tap --node-arg=--require=ts-node/register src/**/*.test.ts"
